--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -29,6 +29,14 @@
       <span class="badge">{{num_completed}}</span>
     </a>
   </li>
+  {% if request.user.profile.has_past_courses %}
+  <li role="presentation" {% if past_tab_active %}class="active"{% endif%}>
+    <a href="{% url 'quests:past' %}">
+      Past Courses
+      <span class="badge">{{num_completed}}</span>
+    </a>
+  </li>
+  {% endif %}
 </ul>
 <!-- Tab panes -->
 <div class="tab-content">
@@ -48,6 +56,13 @@
       {% include 'quest_manager/tab_quests_submission.html' %}
     {% endwith %}
   </div>
+  {% if request.user.profile.has_past_courses %}
+  <div role="tabpanel"
+  class="tab-pane fade {% if past_tab_active %}in active{% endif%}" id="completed">
+    {% with submissions=past_submissions past=True %}
+      {% include 'quest_manager/tab_quests_submission.html' %}
+    {% endwith %}
+  </div>
+  {% endif %}
 </div>
-
 {% endblock %}
