--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -1,16 +1,29 @@
 {% extends "base_sidebar.html" %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}Site Settings | {% endblock %}
+{% block head_title %}Configuration | {% endblock %}
 {% block head %}{% endblock %}
 
 {% block content_first %}{% endblock %}
-{% block heading %}Site Settings<i class="fa fa-cog pull-right"></i>{% endblock %}
+{% block heading %}Configuration<i class="fa fa-cog pull-right"></i>{% endblock %}
 {% block content %}
+<h3>Site Settings</h3>
 <form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
   {{ form|crispy }}
   <input type="submit" value="Save" class="btn btn-primary" />
 </form>
+<h3>Management Functions</h3>
+<div class="row">
+  <div class="col-sm-4">
+      <a href="{% url 'end_active_semester' %}" class="btn btn-danger">End current semester</a>
+  </div>
+  <div class="col-sm-8">
+      This will record a
+       copy of all student marks for the semester.  Which means changing or deleting
+       quests will no longer affect their marks for that semester.
+  </div>
+</div>
+
 {% endblock %}
 
 {% block js %}{% endblock %}
