--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -5,7 +5,7 @@
     <div class="col-xs-1 col-icon"></div>
     <div class="col-xs-4">Quest</div>
     <div class="col-xs-1">XP   </div>
-    <div class="col-xs-1">q.id</div>
+    <div class="col-xs-1">Blocks</div>
     <div class="col-xs-2">User</div>
     <div class="col-xs-3">{{tab.time_heading}}</div>
   </div>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-xs-4">{{s.quest.name}}</div>
             <div class="col-xs-1">{{s.quest.xp}}  </div>
-            <div class="col-xs-1">{{s.quest.id}} </div>
+            <div class="col-xs-1">{{s.user.profile.blocks}} </div>
             <div class="col-xs-2">{{s.user}} <br />
               <small>{{s.user.profile.first_name|add:' '|add:s.user.profile.last_name|truncatechars:15}}</small>
              </div>
