Add budget link

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -113,6 +113,8 @@
             <li><a href="https://docs.google.com/drawings/d/1IN1nFr00VI2BWaRvraiiRGgnYoKPs4ywt2rWevwHgXI/edit?usp=sharing">
                 <i class="fa fa-fw fa-map-o"></i>&nbsp;&nbsp;Quest Map</a></li>
             <li><a href="{% url 'courses:ranks' %}"><i class="fa fa-fw fa-star-o"></i>&nbsp;&nbsp;Ranks List</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1dICnxDSHkQV2HMuuYLNsQLdUGFrSMskdFe_vSz41_Zw/edit?usp=sharing">
+                <i class="fa fa-fw fa-dollar"></i>&nbsp;&nbsp;Hackerspace Budget</a></li>
             <!-- <li><a href="#">#</a></li> -->
             <!-- <li role="separator" class="divider"></li>
             <li class="dropdown-header">Debug</li> -->
