Fix mark calculations: current semester only

--- a/src/courses/templates/courses/mark_calculations.html
+++ b/src/courses/templates/courses/mark_calculations.html
@@ -25,7 +25,7 @@
     </table>
     <h3>Explanation</h3>
     <p>
-      Here is an explanation of how I calculated your mark. If you have any questions about this please ask Mr C!
+      Here is an explanation of how I calculated your mark. If you have any questions about this please ask!
     </p>
     <div class="well">
       {% if num_courses > 1 %}
@@ -65,7 +65,7 @@
     <div class="well">
       <p>Average XP earned per day of class so far:
         <strong>{{obj.xp_per_day_ave|floatformat }}</strong></p>
-      <p>Let Mr C know if there are other stats you are interested in and he will add them!</p>
+      <p>Let us know if there are other stats you are interested in and we will add them!  Make your suggestion using the suggestion box which can be found in the <i class="fa fa-bars"></i> menu at the top right.</p>
     </div>
     <h3>Chillax Line</h3>
     <p>{% if obj.semester.chillax_line_started %}
