--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -87,8 +87,8 @@
                   <a class="btn btn-warning" data-target="#quick_reply{{s.id}}"
                     id= "btn_quick_text{{s.id}}" role="button"
                     title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
-                  <a class="btn btn-info" target="_blank"
-                    href="{% url 'badges:grant' 0 s.user.id %}" role="button">Grant Badge</a>
+                  <!-- <a class="btn btn-info" target="_blank"
+                    href="{% url 'badges:grant' 0 s.user.id %}" role="button">Grant Badge</a> -->
                   <a class="btn btn-default" href="{% url 'quests:skip' s.id %}"
                   title="Do not grant XP for this quest (or badges resulting) but mark as complete."
                   role="button">Skip</a>
