--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -67,9 +67,9 @@
             <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
           {% endif %}
             <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
-            <a class="btn btn-warning" data-target="#quick_reply{{submission.id}}"
+            <!-- <a class="btn btn-warning" data-target="#quick_reply{{submission.id}}"
               id= "btn_quick_text{{submission.id}}" role="button"
-              title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
+              title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a> -->
             <!-- <a class="btn btn-info" target="_blank"
               href="{% url 'badges:grant' 0 submission.user.id %}" role="button">Grant Badge</a> -->
             <a class="btn btn-default" href="{% url 'quests:skip' submission.id %}"
