--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,6 +29,13 @@
 
       {% if messages %}
         {% for message in messages %}
+          {% if 'error' in message.tags %}
+          <audio src="{% static 'sounds/error.mp3' %}" autoplay></audio>
+          {% elif 'warning' in message.tags %}
+          {% elif 'info' in message.tags %}
+          {% elif 'success' in message.tags %}
+          <audio src="{% static 'sounds/success.mp3' %}" autoplay></audio>
+        {% endif %}
         <div role="alert" class="alert alert-dismissible fade in
           {% if 'error' in message.tags %}alert-danger
           {% elif 'warning' in message.tags %}alert-warning
