sound autoload and smaller

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,11 +30,11 @@
       {% if messages %}
         {% for message in messages %}
           {% if 'error' in message.tags %}
-          <audio src="{% static 'sounds/error.mp3' %}" autoplay></audio>
+          <audio src="{% static 'sounds/error_small.mp3' %}" autoplay prelaod='auto'></audio>
           {% elif 'warning' in message.tags %}
           {% elif 'info' in message.tags %}
           {% elif 'success' in message.tags %}
-          <audio src="{% static 'sounds/success.mp3' %}" autoplay></audio>
+          <audio src="{% static 'sounds/success_small.mp3' %}" autoplay prelaod='auto'></audio>
         {% endif %}
         <div role="alert" class="alert alert-dismissible fade in
           {% if 'error' in message.tags %}alert-danger
