--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -8,7 +8,14 @@
 
 <!-- CSS via CDN -->
   <!-- Bootstrap core CSS -->
+{% if config.hs_dark_theme %}
+  <link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
+  <link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
+{% else %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+{% endif %}
+  <link href="{% static 'css/custom_common.css' %}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
 
@@ -37,14 +44,6 @@
 <!-- Font Awesome -->
 <!-- http://fortawesome.github.io/Font-Awesome/ -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-
-
-<!-- Custom CSS -->
-
-
-<link href="{% static 'css/custom.css' %}" rel="stylesheet">
-
 
 <link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
 <link rel="apple-touch-icon" sizes="60x60" href="{% static 'icon/apple-icon-60x60.png' %}">
