--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -8,7 +8,7 @@
 
 <!-- CSS via CDN -->
   <!-- Bootstrap core CSS -->
-{% if config.hs_dark_theme %}
+{% if request.user.profile.dark_theme %}
   <link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
 {% else %}
