dark theme links

--- a/src/static_in_project/static_root/css/custom_slate.css
+++ b/src/static_in_project/static_root/css/custom_slate.css
@@ -30,6 +30,13 @@ body {
   background-color: #32383e;
 }
 
+a {
+  color: #91c8ff;
+}
+
+a:hover {
+  color: #2b669a;
+}
 
 /************ BADGES/Achievements **********************/
 
