dark theme bold = white

--- a/src/static_in_project/static_root/css/custom_slate.css
+++ b/src/static_in_project/static_root/css/custom_slate.css
@@ -38,6 +38,10 @@ a:hover {
   color: #2b669a;
 }
 
+b, strong {
+  color: white;
+}
+
 /************ BADGES/Achievements **********************/
 
 .thumbnail-badge:hover, .thumbnail-badge:focus {
