--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -25,6 +25,10 @@ body {
   background-color: #F8F8F8;
 }
 
+blockquote {
+  font-size: 1em;
+  font-style: italic;
+}
 
 /************ BADGES/Achievements **********************/
 
