--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -47,6 +47,11 @@ body {
   padding-top: 50px;
 }
 
+blockquote {
+  font-size: 1em;
+  font-style: italic;
+}
+
 .footer {
   min-height: 50px;
   padding: 20px 0px;
