--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -25,10 +25,18 @@ body {
   background-color: #F8F8F8;
 }
 
-blockquote {
-  font-size: 1em;
-  font-style: italic;
+/************ SAMP PRE CODE KBD TAGS **********************/
+
+code {
+  background-color: #f5f5f5;
+  color: #333;
+  border: 1px solid #ccc
 }
+
+kbd {
+}
+
+
 
 /************ BADGES/Achievements **********************/
 
