--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -67,11 +67,9 @@
             <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
           {% endif %}
             <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
-            <!-- <a class="btn btn-warning" data-target="#quick_reply{{submission.id}}"
+            <a class="btn btn-warning"
               id= "btn_quick_text{{submission.id}}" role="button"
-              title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a> -->
-            <!-- <a class="btn btn-info" target="_blank"
-              href="{% url 'badges:grant' 0 submission.user.id %}" role="button">Grant Badge</a> -->
+              title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
             <a class="btn btn-default" href="{% url 'quests:skip' submission.id %}"
             title="Do not grant XP for this quest (or badges resulting) but mark as complete."
             role="button">Skip</a>
@@ -98,5 +96,17 @@ $(document).ready(function() {
             'scrollTop':   $('#{{ anchor }}').offset().top
         }, 1000);
     {% endif %}
+
+
+    // Copied from quest_approvals.html
+    $('[id^=btn_quick_text]').on('click', function () {
+        var msg = ' Please read the submission instructions more carefully. Thanks! ';
+
+        var iframe_txt = $("#id_comment_text_iframe").contents().find('div.note-editable');
+        console.log(iframe_txt.html());
+        iframe_txt.append(msg);
+    });
+
+
 });
 </script>{% endblock %}
