--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -12,7 +12,7 @@
   <link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
 {% else %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link href="{% static 'css/bootstrap.min.css'}" rel="stylesheet">
   <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 {% endif %}
   <link href="{% static 'css/custom_common.css' %}" rel="stylesheet">
@@ -20,7 +20,7 @@
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
 
   <!-- Bootstrap Tables! Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.css">
+  <link rel="stylesheet" href="{% static 'css/bootstrap-table.min.css' %}">
 
   <!-- Bootstrap DateTimePicker Widget -->
   <link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
@@ -43,7 +43,8 @@
 
 <!-- Font Awesome -->
 <!-- http://fortawesome.github.io/Font-Awesome/ -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
+<link href="{% static 'css/font-awesome-4.6.3/css/font-awesome.min.css' %}" rel="stylesheet">
 
 <link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
 <link rel="apple-touch-icon" sizes="60x60" href="{% static 'icon/apple-icon-60x60.png' %}">
