--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -6,16 +6,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <!-- js via static files -->
-      <!--<script src="{% static 'js/bootstrap.min.js' %}"></script>-->
+      <script src="{% static 'js/bootstrap.min.js' %}"></script>
       <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
       <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 
-    <!-- js via CDN -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- js via CDN (TOO SLOW!)-->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
 
     <!-- Bootstrap Tables: Latest compiled and minified JavaScript -->
     <!-- http://bootstrap-table.wenzhixin.net.cn/getting-started/ -->
-      <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.js"></script>
+      <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.js"></script> -->
+      <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
       <!-- Latest compiled and minified Locales -->
       <!--<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/locale/bootstrap-table-zh-CN.min.js"></script>-->
 
