--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -12,7 +12,7 @@
   <link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
 {% else %}
-  <link href="{% static 'css/bootstrap.min.css'}" rel="stylesheet">
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 {% endif %}
   <link href="{% static 'css/custom_common.css' %}" rel="stylesheet">
