--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -1,3 +1,10 @@
+<!--
+  Quests
+    > available (tab_quests_available.html)
+    > IN PROGRESS (tab_quests_submission.html)
+    > COMPELTED (tab_quests_submission.html)
+    > PAST COURSES (tab_quests_submission.html)
+-->
 {% load crispy_forms_tags %}
 {% if submissions %}
 
